--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -12,6 +12,7 @@
     "d3-force": "^3.0.0",
     "dotenv": "^16.4.5",
     "http-proxy-middleware": "^3.0.0",
+    "matter-js": "^0.20.0",
     "phaser": "^3.80.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
