--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,19 +86,20 @@ jobs:
           git pull origin master
           echo "✅ Git repository updated"
 
-          # JAR 파일 확인
-          if [ ! -f build/libs/*.jar ]; then
+          # JAR 파일 확인 (개선된 로직)
+          JAR_COUNT=$(ls -1 build/libs/*.jar 2>/dev/null | wc -l)
+          if [ "$JAR_COUNT" -eq 0 ]; then
             echo "❌ JAR file not found!"
             exit 1
           fi
 
-          echo "✅ JAR file verified"
+          echo "✅ JAR file verified ($JAR_COUNT files found)"
           ls -lh build/libs/
 
-          # Docker 재시작 (빌드 스킵)
+          # Docker 재시작 (sudo 권한으로 실행)
           echo "🐳 Restarting Docker containers..."
-          docker compose down
-          docker compose up -d --build
+          sudo docker compose down
+          sudo docker compose up -d --build
 
           echo "⏳ Waiting for application to start..."
           sleep 15
