--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -96,21 +96,30 @@ jobs:
           echo "✅ JAR file verified ($JAR_COUNT files found)"
           ls -lh build/libs/
 
-          # Docker 재시작 (sudo 권한으로 실행)
-          echo "🐳 Restarting Docker containers..."
+          # Docker 재시작 및 캐시 무효화 (sudo 권한으로 실행)
+          echo "🐳 Stopping Docker containers..."
           sudo docker compose down
-          sudo docker compose up -d --build
 
-          echo "⏳ Waiting for application to start..."
-          sleep 15
+          echo "🗑️ Removing old images to ensure fresh build..."
+          sudo docker compose rm -f
+          sudo docker images | grep devzip | awk '{print $3}' | xargs -r sudo docker rmi -f || true
+
+          echo "🔨 Building Docker images without cache..."
+          sudo docker compose build --no-cache
+
+          echo "🚀 Starting Docker containers with force recreate..."
+          sudo docker compose up -d --force-recreate
+
+          echo "⏳ Waiting for application to start (increased wait time due to fresh build)..."
+          sleep 30
 
           # 헬스체크
-          for i in {1..10}; do
+          for i in {1..12}; do
             if curl -f http://localhost:8080/actuator/health > /dev/null 2>&1; then
               echo "✅ Application started successfully!"
               exit 0
             fi
-            echo "⏳ Waiting... ($i/10)"
+            echo "⏳ Waiting... ($i/12)"
             sleep 3
           done
 
